# dishka-cyclopts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
examples/: example.py
src/dishka_cyclopts/: __init__.py  container.py  state.py
tests/: test_inject.py  test_state.py
